--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/kaihatsu_db
 spring.datasource.username=postgres
 spring.datasource.password=himitu
 
+server.servlet.session.timeout= 60m
